# rust-runner

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: EXECUTION_PLAN.md  PROJECT_SUMMARY.md  README.md  USAGE.md
examlples/: comprehensive-example.yaml  example.yaml  test.yaml
src/: executor.rs  main.rs  schema.rs  template.rs
