[package]
name = "rust-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
shell-escape = "0.1.5"
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process", "io-util"] }
